--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "history": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.10",
     "nodemon": "^2.0.15"
